crates/pamoja-ffi/include/pamoja.h

// Which way a two-link arm's elbow bends.
typedef enum {
  // The elbow angle is positive, counter-clockwise.
  PamojaElbow_Up = 0,
  // The elbow angle is negative, clockwise.
  PamojaElbow_Down = 1,
} PamojaElbow;
// An opaque handle to a quadrature encoder decoder.
typedef struct PamojaQuadrature PamojaQuadrature;
// The speeds of a two-sided drive's left and right wheels or tracks.
typedef struct {
  // The left side's speed.
  float left;
  // The right side's speed.
  float right;
} PamojaSideSpeeds;
// A differential drive: two wheels `track` apart.
typedef struct {
  // The distance between the left and right wheels; its magnitude is used.
  float track;
} PamojaDiffDrive;
// A planar body motion: a forward speed and a yaw rate.
typedef struct {
  // The forward speed.
  float linear;
  // The yaw rate, positive turning left.
  float angular;
} PamojaBodyMotion;
// Car-like steering: one steered axle and a driven axle `wheelbase` apart.
typedef struct {
  // The distance from the steered axle to the driven axle; its magnitude is used.
  float wheelbase;
} PamojaAckermann;
// A skid-steer drive: tracks or wheels `track` apart that slip sideways to turn.
typedef struct {
  // The distance between the left and right sides; its magnitude is used.
  float track;
  // How much wider the effective track is than the geometric one; its magnitude is
  // used, and 0 is taken as 1, no slip.
  float slip;
} PamojaSkidSteer;
// The four wheel speeds of a mecanum base.
typedef struct {
  // The front-left wheel's speed.
  float front_left;
  // The front-right wheel's speed.
  float front_right;
  // The rear-left wheel's speed.
  float rear_left;
  // The rear-right wheel's speed.
  float rear_right;
} PamojaWheelSpeeds;
// A mecanum base: four wheels `wheelbase` front to rear and `track` side to side.
typedef struct {
  // The front-to-rear distance between the axles; its magnitude is used.
  float wheelbase;
  // The left-to-right distance between the wheels; its magnitude is used.
  float track;
} PamojaMecanum;
// How fast a robot is asked to move.
typedef struct {
  // Forward speed along the x axis.
  float vx;
  // Leftward speed along the y axis; zero for drives that cannot strafe.
  float vy;
  // Yaw rate about the z axis, positive counter-clockwise.
  float omega;
} PamojaTwist;
// The closest and farthest a two-link arm's hand reaches from its shoulder.
typedef struct {
  // The closest reach, the difference of the link lengths.
  float min;
  // The farthest reach, the sum of the link lengths.
  float max;
} PamojaReach;
// A planar two-link arm: a shoulder link `l1` long and an elbow link `l2` long.
typedef struct {
  // The shoulder link's length; its magnitude is used.
  float l1;
  // The elbow link's length; its magnitude is used.
  float l2;
} PamojaTwoLinkArm;
// A point in a plane.
typedef struct {
  // The x coordinate.
  float x;
  // The y coordinate.
  float y;
} PamojaPoint;
// A two-link arm's joint angles, in radians.
typedef struct {
  // The shoulder angle, from the x axis.
  float shoulder;
  // The elbow angle, relative to the first link.
  float elbow;
} PamojaJoints;
// A 4x4 homogeneous transform, a rotation and a translation, stored row-major.
typedef struct {
  // The sixteen elements, row 0 first; the translation is elements 3, 7, and 11.
  float m[16];
} PamojaTransform;
// One joint of a serial arm in the Denavit-Hartenberg convention.
typedef struct {
  // The link length along the common normal, in meters.
  float a;
  // The link twist about the common normal, in radians.
  float alpha;
  // The link offset along the previous z axis, in meters.
  float d;
  // The joint angle about the previous z axis, in radians.
  float theta;
} PamojaDhParameters;
// The command toward a waypoint, with the geometry behind it.
typedef struct {
  // The body motion to drive.
  PamojaTwist twist;
  // The distance left to the target, in meters.
  double distance_m;
  // The heading error to the target, in degrees, in `(-180, 180]`.
  float heading_error_deg;
  // 1 once the target is within the arrival radius, else 0.
  uint8_t arrived;
} PamojaGuidance;
// Steers toward a waypoint: the speeds and gains of a carrot-following guide.
typedef struct {
  // The forward speed when pointed at the target; its magnitude is used.
  float cruise;
  // How close, in meters, counts as arrived; its magnitude is used.
  double arrival_m;
  // The yaw rate commanded per radian of heading error; its magnitude is used.
  float heading_gain;
  // The largest yaw rate to command; its magnitude is used.
  float max_angular;
} PamojaWaypointFollower;
// A hobby servo's pulse range and travel.
typedef struct {
  // The pulse width at zero degrees, in microseconds.
  uint16_t min_us;
  // The pulse width at full travel, in microseconds.
  uint16_t max_us;
  // The full travel in degrees; its magnitude is used.
  float range_deg;
} PamojaServoMap;
// An electronic speed controller's reverse, neutral, and forward pulse widths.
typedef struct {
  // The pulse width at full reverse, in microseconds.
  uint16_t min_us;
  // The pulse width at rest, in microseconds.
  uint16_t neutral_us;
  // The pulse width at full forward, in microseconds.
  uint16_t max_us;
} PamojaEsc;
// An encoder's resolution and the radius of the wheel it turns with.
typedef struct {
  // Steps per wheel revolution; its magnitude is used.
  float counts_per_rev;
  // The wheel radius in meters; its magnitude is used.
  float wheel_radius;
} PamojaQuadratureScale;
// Creates a quadrature decoder seeded with the encoder's current channel levels.
//
// # Arguments
//
// * `a` - the A channel's level now.
// * `b` - the B channel's level now.
//
// # Returns
//
// A decoder with a count of 0 the caller must release with [`pamoja_quadrature_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaQuadrature *pamoja_quadrature_new(bool a, bool b);
// Feeds a quadrature decoder the channel levels it reads now.
//
// # Returns
//
// 1 or -1 for a step in either direction, and 0 for no change, a jump past a step, or a
// null `quadrature`.
//
// # Safety
//
// `quadrature` must be a live handle from [`pamoja_quadrature_new`], or null.
int8_t pamoja_quadrature_update(PamojaQuadrature *quadrature, bool a, bool b);
// Reads a quadrature decoder's signed count of steps.
//
// # Returns
//
// The count, or 0 if `quadrature` is null.
//
// # Safety
//
// `quadrature` must be a live handle from [`pamoja_quadrature_new`], or null.
int64_t pamoja_quadrature_count(const PamojaQuadrature *quadrature);
// Sets a quadrature decoder's count back to 0, keeping the channel state it last read.
//
// # Safety
//
// `quadrature` must be a live handle from [`pamoja_quadrature_new`], or null.
void pamoja_quadrature_reset(PamojaQuadrature *quadrature);
// Releases a quadrature decoder handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `quadrature` must be a handle from [`pamoja_quadrature_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_quadrature_free(PamojaQuadrature *quadrature);
// Returns the distance a wheel rolled for a step count.
//
// # Returns
//
// The distance in meters, or 0 for a scale with no resolution.
float pamoja_quadrature_scale_distance(PamojaQuadratureScale scale, int64_t count);
// Returns a wheel's speed from the steps counted over a time step.
//
// # Returns
//
// The speed in meters per second, or 0 when `dt` is 0.
float pamoja_quadrature_scale_velocity(PamojaQuadratureScale scale, int64_t delta_count, float dt);