bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Motion.cs


    /// <summary>Creates a quadrature decoder seeded with the encoder's current channel levels.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_quadrature_new(
        [MarshalAs(UnmanagedType.U1)] bool a,
        [MarshalAs(UnmanagedType.U1)] bool b);

    /// <summary>Feeds a quadrature decoder the channel levels it reads now.</summary>
    [LibraryImport(Library)]
    public static partial sbyte pamoja_quadrature_update(
        IntPtr quadrature,
        [MarshalAs(UnmanagedType.U1)] bool a,
        [MarshalAs(UnmanagedType.U1)] bool b);

    /// <summary>Reads a quadrature decoder's signed count of steps.</summary>
    [LibraryImport(Library)]
    public static partial long pamoja_quadrature_count(IntPtr quadrature);

    /// <summary>Sets a quadrature decoder's count back to 0.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_quadrature_reset(IntPtr quadrature);

    /// <summary>Releases a quadrature decoder handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_quadrature_free(IntPtr quadrature);

    /// <summary>Returns the distance a wheel rolled for a step count.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_quadrature_scale_distance(PamojaQuadratureScale scale, long count);

    /// <summary>Returns a wheel's speed from the steps counted over a time step.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_quadrature_scale_velocity(PamojaQuadratureScale scale, long deltaCount, float dt);
}

/// <summary>The speeds of a two-sided drive's left and right wheels or tracks.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaSideSpeeds
{
    /// <summary>The left side's speed.</summary>
    public float Left;

    /// <summary>The right side's speed.</summary>
    public float Right;
}

/// <summary>A planar body motion: a forward speed and a yaw rate.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaBodyMotion
{
    /// <summary>The forward speed.</summary>
    public float Linear;

    /// <summary>The yaw rate, positive turning left.</summary>
    public float Angular;
}

/// <summary>A differential drive: two wheels a track apart.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaDiffDrive
{
    /// <summary>The distance between the wheels; its magnitude is used.</summary>
    public float Track;
}

/// <summary>Car-like steering: axles a wheelbase apart.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaAckermann
{
    /// <summary>The distance from the steered axle to the driven axle; its magnitude is used.</summary>
    public float Wheelbase;
}

/// <summary>A skid-steer drive: sides a track apart that slip to turn.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaSkidSteer
{
    /// <summary>The distance between the sides; its magnitude is used.</summary>
    public float Track;

    /// <summary>How much wider the effective track is; 0 is taken as 1.</summary>
    public float Slip;
}

/// <summary>A mecanum base: four wheels a wheelbase and a track apart.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaMecanum
{
    /// <summary>The front-to-rear distance between the axles.</summary>
    public float Wheelbase;

    /// <summary>The left-to-right distance between the wheels.</summary>
    public float Track;
}

/// <summary>The four wheel speeds of a mecanum base.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaWheelSpeeds
{
    /// <summary>The front-left wheel's speed.</summary>
    public float FrontLeft;

    /// <summary>The front-right wheel's speed.</summary>
    public float FrontRight;

    /// <summary>The rear-left wheel's speed.</summary>
    public float RearLeft;

    /// <summary>The rear-right wheel's speed.</summary>
    public float RearRight;
}

/// <summary>A planar two-link arm.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaTwoLinkArm
{
    /// <summary>The shoulder link's length.</summary>
    public float L1;

    /// <summary>The elbow link's length.</summary>
    public float L2;
}

/// <summary>Which way a two-link arm's elbow bends.</summary>
public enum PamojaElbow
{
    /// <summary>The elbow angle is positive, counter-clockwise.</summary>
    Up = 0,

    /// <summary>The elbow angle is negative, clockwise.</summary>
    Down = 1,
}

/// <summary>The closest and farthest a two-link arm's hand reaches.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaReach
{
    /// <summary>The closest reach.</summary>
    public float Min;

    /// <summary>The farthest reach.</summary>
    public float Max;
}

/// <summary>A point in a plane.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaPoint
{
    /// <summary>The x coordinate.</summary>
    public float X;

    /// <summary>The y coordinate.</summary>
    public float Y;
}

/// <summary>A two-link arm's joint angles, in radians.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaJoints
{
    /// <summary>The shoulder angle, from the x axis.</summary>
    public float Shoulder;

    /// <summary>The elbow angle, relative to the first link.</summary>
    public float Elbow;
}

/// <summary>One joint of a serial arm in the Denavit-Hartenberg convention.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaDhParameters
{
    /// <summary>The link length along the common normal, in meters.</summary>
    public float A;

    /// <summary>The link twist about the common normal, in radians.</summary>
    public float Alpha;

    /// <summary>The link offset along the previous z axis, in meters.</summary>
    public float D;

    /// <summary>The joint angle about the previous z axis, in radians.</summary>
    public float Theta;
}

/// <summary>A 4x4 homogeneous transform, sixteen floats in row-major order.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaTransform
{
    /// <summary>The sixteen elements, row 0 first.</summary>
    public PamojaMatrix16 M;
}

/// <summary>Sixteen floats carried inline inside a blittable struct.</summary>
[InlineArray(Length)]
public struct PamojaMatrix16
{
    /// <summary>The number of elements.</summary>
    public const int Length = 16;

    private float _element0;
}

/// <summary>A carrot-following guide's speeds and gains.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaWaypointFollower
{
    /// <summary>The forward speed when pointed at the target.</summary>
    public float Cruise;

    /// <summary>How close, in meters, counts as arrived.</summary>
    public double ArrivalM;

    /// <summary>The yaw rate commanded per radian of heading error.</summary>
    public float HeadingGain;

    /// <summary>The largest yaw rate to command.</summary>
    public float MaxAngular;
}

/// <summary>The command toward a waypoint, with the geometry behind it.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaGuidance
{
    /// <summary>The body motion to drive.</summary>
    public PamojaTwist Twist;

    /// <summary>The distance left to the target, in meters.</summary>
    public double DistanceM;

    /// <summary>The heading error to the target, in degrees.</summary>
    public float HeadingErrorDeg;

    /// <summary>1 once the target is within the arrival radius, else 0.</summary>
    public byte Arrived;
}

/// <summary>A hobby servo's pulse range and travel.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaServoMap
{
    /// <summary>The pulse width at zero degrees, in microseconds.</summary>
    public ushort MinUs;

    /// <summary>The pulse width at full travel, in microseconds.</summary>
    public ushort MaxUs;

    /// <summary>The full travel in degrees.</summary>
    public float RangeDeg;
}

/// <summary>An electronic speed controller's pulse widths.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaEsc
{
    /// <summary>The pulse width at full reverse, in microseconds.</summary>
    public ushort MinUs;

    /// <summary>The pulse width at rest, in microseconds.</summary>
    public ushort NeutralUs;

    /// <summary>The pulse width at full forward, in microseconds.</summary>
    public ushort MaxUs;
}

/// <summary>An encoder's resolution and its wheel's radius.</summary>
[StructLayout(LayoutKind.Sequential)]
public struct PamojaQuadratureScale
{
    /// <summary>Steps per wheel revolution.</summary>
    public float CountsPerRev;

    /// <summary>The wheel radius in meters.</summary>
    public float WheelRadius;
}
